made button animated

--- a/style.css
+++ b/style.css
@@ -100,6 +100,19 @@ header h2 {
   margin: 0 auto;
   background: #f9e42e;
   color: #033048;
+  animation-duration: 5s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-right: 100%;
+    width: 300%;
+  }
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 
 .blue {
